Fix todo description overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -167,6 +167,7 @@ h1 {
       color: var(--light-1);
       font-size: 0.75rem;
       line-height: 1.3;
+      word-break: break-word;
       &:not(:empty) {
         margin-top: 5px;
       }
